kubernetes/development.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: p6-adapter-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - envFrom:
          - configMapRef:
              name: p6-adapter-cm
          image: ${CI_REGISTRY}/${CI_REGISTRY_PATH}:${GITHUB_RUN_NUMBER}-dev
          imagePullPolicy: Never
          name: app
          args: 
            - /bin/sh
            - -c
            - /bin/bash ./entrypoint.sh
          ports:
            - containerPort: 8080
          resources: 
            limits:
              cpu: 0.25m
              memory: 100Mi
          volumeMounts:
            - mountPath: /var/app/sqlite
              name: app-pv
      restartPolicy: Always
      volumes:
        - name: app-pv
          persistentVolumeClaim:
            claimName: app-pv

# Service
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
  name: app-ingress
  namespace: p6-adapter-dev
spec:
  ports:
    - name: "8080"
      port: 80
      targetPort: 8080
  selector:
    app: app

# Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: p6-adapter-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_clear_headers "strict-transport-security";
      more_clear_headers "x-content-type-options";
      more_clear_headers "x-frame-options";
      more_clear_headers "content-security-policy";
      proxy_set_header X-Forwarded-Proto https;
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
spec:
  rules:
    - host: ${NETWORKING_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-ingress
                port:
                  number: 80
